# timemory

./: .gitignore  .gitmodules  .travis.yml  pyctest-runner.py
.github/workflows/: docker-publish.yml
cmake/Modules/: BuildSettings.cmake  MacroUtilities.cmake  Options.cmake  Packages.cmake  PythonConfig.cmake
cmake/Templates/: timemory-config.cmake.in
docs/: conf.py
docs/api/: operations.md  type_traits.md  utilities.md
docs/getting_started/: integrating.md
examples/ex-ert/: CMakeLists.txt  ex_ert.cpp
examples/ex-gpu-roofline/: ex_gpu_roofline.cpp
source/: CMakeLists.txt  library.cpp  timemory_c.cpp  trace.cpp
source/python/: README.md  libpytimemory-components.hpp  libpytimemory-settings.cpp
source/tests/: CMakeLists.txt  flat_tests.cpp  hybrid_tests.cpp  timeline_tests.cpp  user_bundle_tests.cpp
source/timemory/: .gitignore  CMakeLists.txt  enum.h  hash.hpp  storage.hpp  timemory.hpp  trace.hpp
source/timemory/backends/: CMakeLists.txt  mpi.hpp  nvtx.hpp  process.hpp
source/timemory/backends/types/: cupti.hpp
source/timemory/backends/types/mpi/: extern.hpp
source/timemory/compat/: library.h  macros.h
source/timemory/components/: extern.hpp  factory.hpp  macros.hpp  opaque.hpp  properties.hpp
source/timemory/components/base/: declaration.hpp  definition.hpp  templates.hpp  types.hpp
source/timemory/components/craypat/: components.hpp
source/timemory/components/cuda/: backends.hpp  components.hpp  types.hpp
source/timemory/components/cupti/: cupti_activity.hpp  cupti_counters.hpp  cupti_profiler.hpp
source/timemory/components/data_tracker/: components.hpp  types.hpp
source/timemory/components/gotcha/: components.hpp  mpip.hpp  ncclp.hpp
source/timemory/components/io/: components.hpp
source/timemory/components/ompt/: components.hpp  types.hpp
source/timemory/components/opaque/: definition.hpp
source/timemory/components/papi/: components.hpp  types.hpp
source/timemory/components/roofline/: cpu_roofline.hpp  extern.hpp  gpu_roofline.hpp  types.hpp
source/timemory/components/rusage/: types.hpp
source/timemory/components/timing/: types.hpp
source/timemory/components/trip_count/: types.hpp
source/timemory/components/user_bundle/: components.hpp  extern.hpp
source/timemory/config/: definition.hpp  types.hpp
source/timemory/containers/: CMakeLists.txt  auto_timer.hpp  auto_user_bundle.hpp  macros.hpp
source/timemory/data/: statistics.hpp  stream.hpp
source/timemory/environment/: declaration.hpp  types.hpp
source/timemory/ert/: counter.hpp  data.hpp
source/timemory/general/: source_location.hpp
source/timemory/hash/: definition.hpp  types.hpp
source/timemory/manager/: declaration.hpp  definition.hpp  extern.cpp  macros.hpp  types.hpp
source/timemory/mpl/: type_traits.hpp  types.hpp
source/timemory/operations/: declaration.hpp  extern.cpp  types.hpp
source/timemory/operations/types/: base_printer.hpp  construct.hpp  echo_measurement.hpp  generic.hpp  init.hpp  math.hpp  node.hpp  print.hpp  record.hpp  serialization.hpp  storage_initializer.hpp
source/timemory/operations/types/finalize/: flamegraph.hpp  print.hpp
source/timemory/plotting/: declaration.hpp  definition.hpp  macros.hpp
source/timemory/runtime/: properties.hpp  types.hpp
source/timemory/sampling/: sampler.hpp
source/timemory/settings/: declaration.hpp  definition.hpp  macros.hpp  settings.cpp  types.hpp
source/timemory/storage/: declaration.hpp  definition.hpp  graph.hpp  graph_data.hpp  node.hpp
source/timemory/utility/: macros.hpp  popen.hpp  serializer.hpp  signals.hpp  types.hpp  utility.hpp
source/timemory/utility/bits/: signals.hpp
source/timemory/variadic/: auto_bundle.hpp  auto_hybrid.hpp  auto_list.hpp  auto_tuple.hpp  base_bundle.hpp  component_bundle.cpp  component_bundle.hpp  component_hybrid.hpp  component_list.hpp  component_tuple.hpp
source/tools/: CMakeLists.txt
source/tools/kokkos-connector/: CMakeLists.txt  kp_timemory.cpp  kp_timemory.cpp.in  kp_timemory_filter.cpp
source/tools/timem/: CMakeLists.txt  timem.cpp  timem.hpp
source/tools/timemory-avail/: timemory-avail.cpp
source/tools/timemory-mpip/: CMakeLists.txt
source/tools/timemory-ncclp/: CMakeLists.txt
source/tools/timemory-ompt/: CMakeLists.txt
source/tools/timemory-run/: CMakeLists.txt
timemory/test/: test_timing.py
timemory/util/: util.py
